force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Last_Menstrual_Period__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Last_Menstrual_Period__c</fullName>
    <description>E2B (R2): B.1.6a, lastmenstrualdateformat (3N) --&gt; Value should be 102 AND B.1.6b, lastmenstrualdate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.6 Last Menstrual Period Date
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information. nullFlavor: MSK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element captures the date of the last menstrual period of the patient when it is relevant.</inlineHelpText>
    <label>Patient Last Menstrual Period</label>
    <type>Date</type>
</CustomField>