force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Patient_Weight__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient_Weight__c</fullName>
    <description>E2B (R2): B.1.3, patientweight (6N)

E2B (R3): D.3 Body Weight (kg)
Conformance: Optional
Data Type: 6N
OID: None
Value Allowed: Numeric</description>
    <inlineHelpText>The weight at the time of the event or reaction</inlineHelpText>
    <label>Patient Weight (kg)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>