force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_QA_Summary__c.field-meta.xml
<CustomField>
    <fullName>PJN_QA_Summary__c</fullName>
    <description>Enter a summary of the QA conducted on this AE.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a summary of the QA conducted on this AE.</inlineHelpText>
    <label>QA Summary</label>
    <type>TextArea</type>
</CustomField>