force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Reconciliation_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reconciliation_Number__c</fullName>
    <description>Reconciliation number for the Patient Safety System</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Reconciliation number for the Patient Safety System</inlineHelpText>
    <label>Reconciliation Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>