force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reopen_Reason__c</fullName>
    <description>Captures the reason the AE was reopened.</description>
    <inlineHelpText>Captures the reason the AE was reopened.</inlineHelpText>
    <label>Reopen Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Reopen_Reason</valueSetName>
    </valueSet>
</CustomField>