force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Reported_Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reported_Cause_of_Death__c</fullName>
    <description>E2B (R2): B.1.9.2.b, patientdeathreport (250AN)

E2B (R3): D.9.2.r.2 Reported Cause(s) of Death (free text)
Conformance: Optional, but required if D.9.2.r.1 is populated.
Data Type: 250AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>MedDRA term should be used if applicable.</inlineHelpText>
    <label>Reported Cause of Death</label>
    <length>250</length>
    <type>Text</type>
</CustomField>