force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Reporter_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reporter_s_Comments__c</fullName>
    <description>E2B (R2): B.5.2, reportercomment (500 AN)

E2B (R3):  H.2  Reporter&apos;s Comments
User Guidance: This data element captures the reporter&apos;s comments on the diagnosis, causality
assessment or other issues considered relevant.
Conformance Optional
Data Type: 20000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s comments on the diagnosis, causality
assessment or other issues considered relevant.</inlineHelpText>
    <label>Reporter&apos;s Comments</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>