force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Results_in_Death__c.field-meta.xml
<CustomField>
    <fullName>PJN_Results_in_Death__c</fullName>
    <description>E2B (R2): A.1.5.2, seriousnessdeath (1N)
E2B (R3): Moved to E.i.3.2 (AE Reaction)</description>
    <label>Results in Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>