force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Results_of_Relevant_Tests_Procedures__c.field-meta.xml
<CustomField>
    <fullName>PJN_Results_of_Relevant_Tests_Procedures__c</fullName>
    <description>E2B (R2): B.3.2, resultstestsprocedures (2000AN)
E2B (R3): NA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Results of Relevant Tests and Procedures</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>