force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Serious__c.field-meta.xml
<CustomField>
    <fullName>PJN_Serious__c</fullName>
    <description>E2B (R2): A.1.5.1, serious (1N)
E2B (R3): NA</description>
    <label>Serious</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>