force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Sponsor_Study_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sponsor_Study_Number__c</fullName>
    <description>E2B (R2): Moved from A.2.3.2 (AE Reporter)

E2B (R3): C.5.3 Sponsor Study Number
Conformance: Optional
Data Type: 50AN
OID: 2.16.840.1.113883.3.989.2.1.3.5
Value Allowed: Free text, nullFlavor: ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element should be completed only if the sender is the study sponsor or has been informed of the study number by the sponsor.</inlineHelpText>
    <label>Sponsor Study Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>