force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>Indicates the state of the Adverse Event.  The record will be locked when closed and will be locked and removed from reporting when cancelled.</description>
    <inlineHelpText>Indicates the state of the Adverse Event.  The record will be locked when closed and will be locked and removed from reporting when cancelled.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Inquiry_Management_Status</valueSetName>
    </valueSet>
</CustomField>