force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Study_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Study_Name__c</fullName>
    <description>E2B (R2): Moved from A.2.3.1 (AE Reporter)

E2B (R3): C.5.2 Study Name
Conformance: Optional
Data Type: 2000AN
OID: None
Value Allowed: Free text, nullFlavor: ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element should be populated with the study name as registered in the jurisdiction where the ICSR is reported.</inlineHelpText>
    <label>Study Name</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>