force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Study_Type__c</fullName>
    <description>E2B (R2): Moved from A.2.3.3 (AE Reporter)

E2B (R3): C.5.4 Study Type
Conformance: Optional, but required if C.1.3=2 (Report from study).
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.8
Value Allowed:
1=Clinical trials
2=Individual patient use(e.g. ‘compassionate use’ or ‘named patient basis’)
3=Other studies (e.g. pharmacoepidemiology, pharmacoeconomics, intensive monitoring)</description>
    <inlineHelpText>This information should be provided if the ‘Type of Report&apos; has been populated with ‘Report from study’.</inlineHelpText>
    <label>Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>