force-app/main/default/src/objects/PJN_Adverse_Event__c/fields/PJN_Type_of_Report__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type_of_Report__c</fullName>
    <description>E2B (R2): A.1.4, reporttype (1N)

E2B (R3): C.1.3 Type of Report
User Guidance: This data element captures the type of report independently of its source; a
separate element for the designation of the source is covered in item C.4
and is not duplicated in this section.
Conformance: Required
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.2
Value Allowed: 1=Spontaneous report
2=Report from study
3=Other
4=Not available to sender (unknown)</description>
    <inlineHelpText>User Guidance: This data element captures the type of report independently of its source; a
separate element for the designation of the source is covered in item C.4
and is not duplicated in this section.</inlineHelpText>
    <label>Type of Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>