force-app/main/default/src/objects/PJN_Adverse_Event__c/recordTypes/PJN_Adverse_Event.recordType-meta.xml
<RecordType>
    <fullName>PJN_Adverse_Event</fullName>
    <active>true</active>
    <label>Adverse Event</label>
</RecordType>