force-app/main/default/src/objects/PJN_Adverse_Event__c/recordTypes/PJN_Adverse_Event_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_Adverse_Event_Closed</fullName>
    <active>true</active>
    <label>Adverse Event - Closed</label>
</RecordType>