force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Cannot_Edit_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Cannot_Edit_When_Closed</fullName>
    <active>true</active>
    <description>Cannot edit locked Adverse Event records</description>
    <errorConditionFormula>PJN_Locked__c &amp;&amp; PRIORVALUE(PJN_Locked__c) &amp;&amp; !ISCHANGED( PJN_QA_Summary__c )</errorConditionFormula>
    <errorMessage>Cannot edit locked Adverse Event records</errorMessage>
</ValidationRule>