force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Cannot_Modify_with_Legal_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Cannot_Modify_with_Legal_Hold</fullName>
    <active>true</active>
    <description>Cannot modify the record while there is a legal hold</description>
    <errorConditionFormula>!ISCHANGED(PJN_Legal_Hold__c) &amp;&amp; PJN_Legal_Hold__c</errorConditionFormula>
    <errorMessage>This record is on legal hold and cannot be modified.</errorMessage>
</ValidationRule>