force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Need_Perm_to_QA.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Need_Perm_to_QA</fullName>
    <active>true</active>
    <description>User needs permission to enter QA information</description>
    <errorConditionFormula>ISCHANGED( PJN_QA_Summary__c )</errorConditionFormula>
    <errorDisplayField>PJN_QA_Summary__c</errorDisplayField>
    <errorMessage>Cannot edit without permission to QA</errorMessage>
</ValidationRule>