force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Reopen_with_Perm_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Reopen_with_Perm_Only</fullName>
    <active>true</active>
    <description>Only someone with the permission can re-open a Closed AE.</description>
    <errorConditionFormula>AND(
(TEXT(PRIORVALUE( PJN_Status__c )) = &quot;Closed&quot; || TEXT(PRIORVALUE( PJN_Status__c )) = &quot;Cancelled&quot;),
NOT(TEXT( PJN_Status__c ) = &quot;Closed&quot; || TEXT(PJN_Status__c) =&quot;Cancelled&quot;)
)</errorConditionFormula>
    <errorDisplayField>PJN_Status__c</errorDisplayField>
    <errorMessage>Only users with special permission can re-open closed or canceled AEs</errorMessage>
</ValidationRule>