force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Require_to_Close_DateTime_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_to_Close_DateTime_Submitted</fullName>
    <active>true</active>
    <description>The date/time submitted must be populated to close an AE</description>
    <errorConditionFormula>AND(
ISPICKVAL(PJN_Status__c, &quot;Closed&quot;),
ISBLANK( PJN_Date_Time_Submitted__c )
)</errorConditionFormula>
    <errorDisplayField>PJN_Date_Time_Submitted__c</errorDisplayField>
    <errorMessage>Cannot close the AE unless the Date/Time Submitted is populated.</errorMessage>
</ValidationRule>