force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Require_to_Close_Reconciliation.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_to_Close_Reconciliation</fullName>
    <active>true</active>
    <description>The AE Reconciliation number is required to close the AE</description>
    <errorConditionFormula>AND(
ISPICKVAL(PJN_Status__c, &quot;Closed&quot;),
ISBLANK( PJN_Reconciliation_Number__c )
)</errorConditionFormula>
    <errorDisplayField>PJN_Reconciliation_Number__c</errorDisplayField>
    <errorMessage>The AE Reconciliation number is required to close the AE</errorMessage>
</ValidationRule>