force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Require_Transfer_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_Transfer_Reason</fullName>
    <active>true</active>
    <description>Must provide an transfer reason unless taking from a queue or assigning to yourself.</description>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp;
ISBLANK(TEXT(PRIORVALUE(PJN_Transfer_Reason__c))) &amp;&amp;
ISBLANK(TEXT(PJN_Transfer_Reason__c)) &amp;&amp;
!(BEGINS(PRIORVALUE(OwnerId),&quot;00G&quot;)) &amp;&amp;
!($User.Id = LEFT(OwnerId,15))</errorConditionFormula>
    <errorDisplayField>PJN_Transfer_Reason__c</errorDisplayField>
    <errorMessage>Must provide a transfer reason when changing owner</errorMessage>
</ValidationRule>