force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Valid_Date_of_Awareness.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Valid_Date_of_Awareness</fullName>
    <active>true</active>
    <description>Cannot set the Date of Awareness in the future</description>
    <errorConditionFormula>PJN_Date_of_Awareness__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>PJN_Date_of_Awareness__c</errorDisplayField>
    <errorMessage>Cannot set the date of awareness in the future</errorMessage>
</ValidationRule>