force-app/main/default/src/objects/PJN_Adverse_Event__c/validationRules/PJN_Valid_Date_Opened.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Valid_Date_Opened</fullName>
    <active>true</active>
    <description>Cannot set the Date/Time Opened in the future</description>
    <errorConditionFormula>PJN_Date_Time_Opened__c  &gt; NOW()</errorConditionFormula>
    <errorDisplayField>PJN_Date_Time_Opened__c</errorDisplayField>
    <errorMessage>Cannot set date opened in the future</errorMessage>
</ValidationRule>