force-app/main/default/src/objects/PJN_Adverse_Event__c/listViews/PJN_AEs_Escalated_To_Me.listView-meta.xml
<ListView>
    <fullName>PJN_AEs_Escalated_To_Me</fullName>
    <columns>NAME</columns>
    <columns>PJN_Transfer_Reason__c</columns>
    <columns>PJN_Status__c</columns>
    <columns>PJN_SLA_Flag__c</columns>
    <columns>PJN_Due_Date__c</columns>
    <columns>PJN_Country__c</columns>
    <columns>PJN_Date_of_Awareness__c</columns>
    <columns>PJN_Narrative__c</columns>
    <columns>PJN_Date_Time_Opened__c</columns>
    <columns>PJN_Case__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PJN_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Cancelled</value>
    </filters>
    <filters>
        <field>PJN_Is_Escalated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>AEs Escalated To Me</label>
    <language>en_US</language>
</ListView>