force-app/main/default/src/objects/PJN_Adverse_Event__c/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>NAME</columns>
    <columns>PJN_Transfer_Reason__c</columns>
    <columns>PJN_Status__c</columns>
    <columns>PJN_SLA_Flag__c</columns>
    <columns>PJN_Due_Date__c</columns>
    <columns>PJN_Country__c</columns>
    <columns>PJN_Date_of_Awareness__c</columns>
    <columns>PJN_Narrative__c</columns>
    <columns>PJN_Date_Time_Opened__c</columns>
    <columns>PJN_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>